apps/monitoring/grafana/grafana-middleware-headers-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-headers
  namespace: monitoring
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Host: "grafana.catacumbas69.com:8080"
      X-Forwarded-Proto: "http"
