apps/monitoring/grafana/grafana-middleware-strip-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-strip
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
