apps/monitoring/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.catacumbas69.com`)
      kind: Rule
      priority: 100
      services:
        - name: prometheus-grafana
          port: 80
